save result of quiz to DB

--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -80,5 +80,6 @@
         </div>
       </div>
     </div>
+    <!-- <ion-button (click)="makeColor()">CREAR COLOR</ion-button> -->
    </div>
 </ion-content>
