back arrow to edit user page

--- a/src/app/pages/edit-user/edit-user.page.html
+++ b/src/app/pages/edit-user/edit-user.page.html
@@ -1,6 +1,9 @@
-<ion-header> </ion-header>
-
 <ion-content class="ion-padding">
+  <div class="menuContainerFavorites">
+    <ion-buttons mode="ios" slot="start" >
+      <ion-back-button defaultHref="/tabs/account"></ion-back-button>
+      </ion-buttons>
+     </div>
   <div class="containerEditUser">
     <h4 class="titleEdit">Ingresa tu datos</h4>
     <div>
