starting with chart & stats

--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -74,9 +74,9 @@
         </div>
         <div class="infoQuizzes">
           <p class="text3">Quizzes terminados</p>
-          <p class="text">20</p>
+          <p class="text">{{quizzesTotal}}</p>
           <p class="text3">Aprobados</p>
-          <p class="text">17</p>
+          <p class="text">{{quizzesApproved}}</p>
         </div>
       </div>
     </div>
