--- a/src/app/pages/profile-favs/profile-favs.page.html
+++ b/src/app/pages/profile-favs/profile-favs.page.html
@@ -18,9 +18,9 @@
             {{fav.description}}
           </ion-card-content>
           <div class="button">
-          <ion-button 
+          <!-- <ion-button 
            (click)="goToSchool(fav.id)"
-           class="margin-text form-rounded buttonFavs">Más Info</ion-button>
+           class="margin-text form-rounded buttonFavs">Más Info</ion-button> -->
           </div>
         </ion-card>
       </ion-item-sliding>
