--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -17,6 +17,8 @@
   --ion-color-tertiary: grey;
 
   --ion-color-light: black;
+
+  --ion-color-success:  rgba(231, 246, 247, 0.3);
 }
 
 /*
@@ -39,6 +41,8 @@
   --ion-color-tertiary: white;
 
   --ion-color-light: white;
+
+  --ion-color-success:  rgba(231, 246, 247, 0.3);
 }
 
 /*
@@ -60,6 +64,8 @@
   --ion-color-tertiary: white;
 
   --ion-color-light: white;
+
+  --ion-color-success:  rgba(231, 246, 247, 0.3);
 }
 
 .ios body.dark ion-modal {
@@ -88,4 +94,6 @@
   --ion-color-tertiary: white;
 
   --ion-color-light: white;
+
+  --ion-color-success:  rgba(231, 246, 247, 0.3);
 }
