Edit user page and styles

--- a/src/app/pages/edit-user/edit-user.page.html
+++ b/src/app/pages/edit-user/edit-user.page.html
@@ -1,13 +1,10 @@
 <ion-content class="ion-padding">
-  <div class="menuContainerFavorites">
+  <div class="menuContainerBackArrow">
     <ion-buttons mode="ios" slot="start" >
       <ion-back-button defaultHref="/tabs/account"></ion-back-button>
       </ion-buttons>
      </div>
   <div class="containerEditUser">
-    <ion-buttons class="backArrowEdit" mode="ios" slot="start">
-      <ion-back-button defaultHref="/tabs/account"></ion-back-button>
-    </ion-buttons>
     <h4 class="titleEdit">Ingresa tu datos</h4>
     <div>
       <form
