--- a/src/app/pages/orgs/orgs.page.scss
+++ b/src/app/pages/orgs/orgs.page.scss
@@ -1,14 +1,14 @@
 #fav{
-    position:absolute;
-    height:80px;
-    width:80px;
+    position: absolute;
+    height: 80px;
+    width: 80px;
     top: -10px;
-    right : 20px;
+    right: 10px;
 }
 
 #logo{
     height:60px;
-    width:60px;
+    width: 60px;
     margin-right: 10px;
 }
 
@@ -30,8 +30,6 @@
 #contenedor{
     display: flex;
     flex-direction: row;
-    
-
 }
 
 .buttonOrgs {
@@ -48,4 +46,5 @@
 .orgsNameContainer {
 background-color: none;
 margin-left: 1rem;
+margin-top: 1rem;
 }
