--- a/src/app/pages/quiz/quiz.page.scss
+++ b/src/app/pages/quiz/quiz.page.scss
@@ -1,55 +1,66 @@
 .textQuiz {
-    color:black;
-    margin-bottom: 0rem;
+  color: black;
+  margin-bottom: 0rem;
 }
 
 .descriptionQuiz {
-    color:black;
-    margin-bottom: 0.5rem;
+  color: black;
+  margin-bottom: 0.5rem;
 }
 
 .questionsQuiz {
-    color:black;
-    margin-top: 0rem;
-    margin-bottom: 0.1rem;
+  color: black;
+  margin-top: 0rem;
+  margin-bottom: 0.1rem;
 }
 
 .quizHeader {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    margin-top: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1.5rem;
 }
 
 .logoSchool {
-    border-radius: 1.5rem;
-    width: 5rem;
+  border-radius: 1.5rem;
+  width: 5rem;
 }
 
 .buttonStart {
-    margin: 0rem 0rem 1.8rem 1rem;
+  margin: 0rem 0rem 1rem 1rem;
 }
 
-#finalImg{
-    display: flex;
-   
-    justify-content: center;
-    align-items: center;
-    width: 50%;
+#finalImg {
+  display: flex;
 
+  justify-content: center;
+  align-items: center;
+  width: 50%;
 }
 
-#finalCard{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+#finalCard {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-#finalContent{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+#finalContent {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.quizNameContainer {
+  background-color: none;
+  margin-left: 1rem;
+  margin-top: 1rem;
+}
+
+.buttonStartQuiz {
+  display: flex;
+  justify-content: right;
+  margin-right: 1rem;
 }
