--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -28,10 +28,10 @@
 
   <ion-list >
     <ion-progress-bar color="primary" value={{progressBar}}></ion-progress-bar>
-
     <ion-item-sliding  *ngFor="let q of Questions">
-     
+      
       <ion-card *ngIf="(Questions.indexOf(q)+1) === this.step" >
+        <ion-item>{{time}}</ion-item>
       
         <ion-card-header>
           <ion-card-title> {{q.question}} </ion-card-title>
@@ -41,9 +41,11 @@
             {{a.text}}
           </ion-button>
         </ion-card-content>
-
+        <ion-button (click)="changeStep(Questions.indexOf(q)+2, q.Answers.text)" >
+          Continuar
+        </ion-button>
       </ion-card>
-     
+      
     </ion-item-sliding>
 
     <ion-item-sliding *ngIf="Finished === 'finished'" >
