--- a/src/app/pages/enrolled-quizzes/enrolled-quizzes.page.scss
+++ b/src/app/pages/enrolled-quizzes/enrolled-quizzes.page.scss
@@ -28,3 +28,11 @@
   background-color: none;
   margin-left: 1rem;
 }
+
+#fav{
+  position: absolute;
+  height: 80px;
+  width: 80px;
+  top: -10px;
+  right: 10px;
+}
