--- a/src/app/pages/enrolled-quizzes/enrolled-quizzes.page.html
+++ b/src/app/pages/enrolled-quizzes/enrolled-quizzes.page.html
@@ -5,10 +5,11 @@
         </ion-buttons>
         <h6 class="title">Estás esperando prespuesta de</h6>
       </div>
+      <ion-item *ngIf="vacio"> Lista vacía</ion-item>
     <ion-item-sliding *ngFor="let quiz of EnrolledQuizzes">
       <ion-card>
         <div class="quizImg">
-          <ion-icon (click)="remove(this.id, quiz.id)" id="fav"  name="trash"></ion-icon>
+          <ion-icon (click)="remove(this.id, quiz.id, quiz.name)" id="fav"  name="trash"></ion-icon>
           <img src="{{quiz.logo}}" />
         </div>
         <div class="quizNameContainer">
