--- a/src/app/pages/quiz/quiz.page.scss
+++ b/src/app/pages/quiz/quiz.page.scss
@@ -1,8 +1,3 @@
-.textQuiz {
-  color: black;
-  margin-bottom: 0rem;
-}
-
 .descriptionQuiz {
   color: black;
   margin-bottom: 0.5rem;
@@ -23,8 +18,8 @@
 }
 
 .logoSchool {
-  border-radius: 1.5rem;
-  width: 5rem;
+  border-radius: 50%;
+  width: 4rem;
 }
 
 .buttonStart {
@@ -63,4 +58,30 @@
   display: flex;
   justify-content: right;
   margin-right: 1rem;
+}
+
+.info {
+  padding: 1rem;
+}
+
+.quizHeaderInfo {
+  display: flex;
+  flex-direction: column;
+}
+
+.cardQuiz {
+  height: 100vh;
+}
+
+.infoSchool {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+.textNameSchool {
+  font-size: 1.2rem;
+  color: var(--ion-color-light)
 }
