--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -3,65 +3,74 @@
     <ion-back-button defaultHref="/tabs/quizzes"></ion-back-button>
     <ion-title>{{name}}</ion-title>
   </div>
- 
-  <ion-card *ngIf="infoQuiz">
+
+  <ion-card class="cardQuiz" *ngIf="infoQuiz">
+    <div class="infoSchool">
+      <ion-text class="textNameSchool">{{this.School.name}}</ion-text>
+      <img src="{{this.School.logo}}" class="logoSchool" />
+    </div>
     <div class="quizImg">
       <img src="{{logo}}" />
     </div>
-      <div class="quizNameContainer">
-      <ion-card-title color="light">{{name}}</ion-card-title>
-      <p class="textQuiz">{{this.Subject.name}}</p>
-      <ion-card-subtitle class="questionsQuiz"
-        >{{quantity}} preguntas</ion-card-subtitle>
+    <div class="info">
+      <div class="data">
+        <ion-card-subtitle class="questionsQuiz"
+          >{{quantity}} preguntas</ion-card-subtitle
+        >
+        <ion-content>{{this.Subject.name}}</ion-content>
+        <p class="descriptionQuiz">
+          <em>Descripción</em> <br />
+          {{description}}
+        </p>
       </div>
-    <ion-card-content>
-      <p class="descriptionQuiz"><em>Descripción</em> <br/> {{description}}</p>
+    </div>
+
+<!--     <ion-card-content>
       <img src="{{this.School.logo}}" class="logoSchool" />
       <p class="textQuiz">{{this.School.name}}</p>
-    </ion-card-content>
+    </ion-card-content> -->
 
     <div class="buttonStartQuiz">
-      <ion-button 
-      (click)="comenzar()" class="primary buttonStart">Comenzar</ion-button>
+      <ion-button (click)="comenzar()" class="primary buttonStart"
+        >Comenzar</ion-button
+      >
     </div>
   </ion-card>
 
-  <ion-list >
-    <ion-progress-bar color="primary" value={{progressBar}}></ion-progress-bar>
+  <ion-list>
+    <ion-progress-bar
+      color="primary"
+      value="{{progressBar}}"
+    ></ion-progress-bar>
 
-    <ion-item-sliding  *ngFor="let q of Questions">
-     
-      <ion-card *ngIf="(Questions.indexOf(q)+1) === this.step" >
-      
+    <ion-item-sliding *ngFor="let q of Questions">
+      <ion-card *ngIf="(Questions.indexOf(q)+1) === this.step">
         <ion-card-header>
           <ion-card-title> {{q.question}} </ion-card-title>
-          </ion-card-header>
+        </ion-card-header>
         <ion-card-content>
-          <ion-button (click)="changeStep(Questions.indexOf(q)+2, a) " *ngFor="let a of q.Answers">
+          <ion-button
+            (click)="changeStep(Questions.indexOf(q)+2, a) "
+            *ngFor="let a of q.Answers"
+          >
             {{a.text}}
           </ion-button>
         </ion-card-content>
-
       </ion-card>
-     
     </ion-item-sliding>
 
-    <ion-item-sliding *ngIf="Finished === 'finished'" >
-     
+    <ion-item-sliding *ngIf="Finished === 'finished'">
       <ion-card id="finalCard">
-      
         <ion-card-header>
-          <ion-card-title> {{countCorrect}} respuestas correctas </ion-card-title>
-          <ion-card-subtitle> sobre {{Questions.length}}  </ion-card-subtitle>
-          </ion-card-header>
+          <ion-card-title>
+            {{countCorrect}} respuestas correctas
+          </ion-card-title>
+          <ion-card-subtitle> sobre {{Questions.length}} </ion-card-subtitle>
+        </ion-card-header>
         <ion-card-content id="finalContent">
-        
-         <ion-img id="finalImg" [src]="imageToShow"></ion-img>
+          <ion-img id="finalImg" [src]="imageToShow"></ion-img>
         </ion-card-content>
-  
       </ion-card>
-     
     </ion-item-sliding>
-
   </ion-list>
 </ion-content>
