no borders on graphs

--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -69,7 +69,7 @@
             <div class="chartContainer">
               <canvas
               #doughnutCanvas
-                style="position: relative; height: 5rem"
+                style="position: relative; height: 5rem;"
               ></canvas>
             </div>
             <div class="infoQuizzes">
