--- a/src/app/pages/enrolled-quizzes/enrolled-quizzes.page.scss
+++ b/src/app/pages/enrolled-quizzes/enrolled-quizzes.page.scss
@@ -6,7 +6,7 @@
 
 .title {
   margin-top: 0.4rem;
-  margin-left: 2rem;
+  margin-left: 1rem;
 }
 
 .buttonEnroll {
@@ -31,8 +31,9 @@
 
 #fav{
   position: absolute;
-  height: 80px;
-  width: 80px;
-  top: -10px;
+  color: rgb(179, 23, 23);
+  height: 40px;
+  width: 40px;
+  top: 5px;
   right: 10px;
 }
