--- a/src/app/pages/enrolled-quizzes/enrolled-quizzes.page.html
+++ b/src/app/pages/enrolled-quizzes/enrolled-quizzes.page.html
@@ -3,7 +3,7 @@
       <ion-buttons mode="ios" slot="start" >
         <ion-back-button defaultHref="/tabs/account"></ion-back-button>
         </ion-buttons>
-        <h6 class="title">Estás esperando respuesta de</h6>
+        <h6 class="title">Estás esperando respuesta de:</h6>
       </div>
       <ion-item *ngIf="vacio"> Lista vacía</ion-item>
     <ion-item-sliding *ngFor="let quiz of EnrolledQuizzes">
