cleaning code & styles to css alerts

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -21,6 +21,8 @@
   --ion-color-success:  rgba(231, 246, 247, 0.3);
 
   --ion-color-back:  rgba(204, 231, 230, 0.295);
+
+  // --ion-background-color: 
   }
 
 /*
