quize time to 60 & DB deployed

--- a/src/global.scss
+++ b/src/global.scss
@@ -158,6 +158,7 @@
 
   .alert-button.sc-ion-alert-md{
     color: white;
+    background-color:#133337;
   }
 
   .alert-input-group.sc-ion-alert-md{
