Background color in dark mode inverted

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,7 +34,7 @@
 
   --ion-color-secondary: #a1bebd;
 
-  --ion-background-color: linear-gradient(217deg, #000000, #00838f);
+  --ion-background-color: linear-gradient(217deg, #00838f, #000000);
 
   --ion-item-background: rgb(20, 27, 27, 0.5);
 
@@ -59,7 +59,7 @@
   
   --ion-color-secondary: #a1bebd;
 
-  --ion-background-color: linear-gradient(217deg, #000000, #00838f);
+  --ion-background-color: linear-gradient(217deg, #00838f, #000000);
 
   --ion-item-background: rgb(20, 27, 27, 0.5);
 
@@ -91,7 +91,7 @@
 
   --ion-color-secondary: #a1bebd;
 
-  --ion-background-color: linear-gradient(217deg, #000000, #00838f);
+  --ion-background-color: linear-gradient(217deg, #00838f, #000000);
 
   --ion-item-background: rgb(20, 27, 27, 0.5);
 
