fixing buttons & NaN on profile

--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -78,7 +78,7 @@
               <p class="text3">Aprobados</p>
               <p class="text">{{quizzesApproved}}</p>
               <p class="text3">Promedio</p>
-              <p class="text">{{quizzesAVG}}</p>
+              <p class="text">{{quizzesAVG || 0}}</p>
               
             </div>
           </div>
