--- a/src/app/pages/quiz/quiz.page.scss
+++ b/src/app/pages/quiz/quiz.page.scss
@@ -1,10 +1,8 @@
 .descriptionQuiz {
-  color: black;
   margin-bottom: 0.5rem;
 }
 
 .questionsQuiz {
-  color: black;
   margin-top: 0rem;
   margin-bottom: 0.1rem;
 }
@@ -92,5 +90,8 @@
 
 #ansBtn {
    height: 60px;
+}
 
+.questionText {
+  color: var(--ion-color-light);
 }
