change format date at edit profile

--- a/src/app/pages/edit-user/edit-user.page.html
+++ b/src/app/pages/edit-user/edit-user.page.html
@@ -37,7 +37,7 @@
             matInput
             [(ngModel)]="birthdate"
             value="{{birthdate}}"
-            placeholder="Fecha de nacimiento MM/DD/AAAA"
+            placeholder="Fecha de nacimiento AAAA/MM/DD"
             formControlName="birthdate"
           />
         </mat-form-field>
