--- a/src/app/pages/sign-in/sign-in.page.html
+++ b/src/app/pages/sign-in/sign-in.page.html
@@ -30,7 +30,7 @@
         <mat-form-field>
           <input
             matInput
-            placeholder="Fecha de nacimiento YYYY-MM-DD"
+            placeholder="Fecha de nacimiento MM-DD-YYYY"
             formControlName="birthdate"
             required
           />
