fixing button face login

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -43,10 +43,10 @@
    <ion-grid>
     <ion-row>
       <ion-col class="flex-columns">
-        <ion-button id="google" icon-left block>
+        <!-- <ion-button id="google" icon-left block>
           <ion-icon name="logo-google"></ion-icon> 
          Google
-      </ion-button>
+      </ion-button> -->
     
         <ion-button (click)="signInWithFacebook()" id="facebook" icon-left block>
             <ion-icon name="logo-facebook"></ion-icon>
